--- a/package.json
+++ b/package.json
@@ -1,37 +1,31 @@
 {
-  "name": "weather-app",
+  "name": "weather-dashboard",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/server.js",
-  "type": "module",
+  "main": "index.js",
   "scripts": {
-    "build": "npx tsc",
-    "start": "npm run build && node dist/server.js --ignore client",
-    "dev": "npx nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm run client:build && npm run server",
+    "start:dev": "concurrently \"npm run server:dev\" \"wait-on tcp:3001 && npm run client:dev\"",
+    "server": "cd server && npm start",
+    "server:dev": "cd server && npm run dev",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "client:build": "cd client && npm run build",
+    "client:dev": "cd client && npm run dev",
+    "build": "cd client && npm run build",
+    "render-build": "npm install && npm run build"
   },
-  "nodemonConfig": {
-    "watch": [
-      "src"
-    ],
-    "ext": "ts,json,js",
-    "exec": "npx tsc && node dist/server.js"
-  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "dayjs": "^1.11.10",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "node-fetch": "^3.3.2",
-    "uuid": "^9.0.1"
-  },
   "devDependencies": {
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.12.7",
-    "@types/uuid": "^9.0.8",
+    "concurrently": "^8.2.2",
     "nodemon": "^3.1.0",
-    "typescript": "^5.4.5"
+    "wait-on": "^7.2.0"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.2",
+    "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.7"
   }
 }
